<resources>
    <string name="app_name">Smyle</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="sign_out">SIGN OUT</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="about">ABOUT</string>
    <string name="donate">DONATE</string>
    <string name="refer">REFER</string>
    <string name="book">Book pilgrimage trips</string>
    <string name="educate">Educate 100 girls</string>
    <string name="join">JOIN US</string>
    <string name="contributions">Contributions</string>
    <string name="social">SOCIAL MEDIA HANDLES</string>
    <string name="fb">LIKE THE PAGE</string>
    <string name="youtube">WATCH THE EFFORTS</string>
    <string name="Pay">PAY NOW</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="facebook_app_id">1285172411623865</string>
    <string name="fb_login_protocol_scheme">fb1285172411623865</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>

</resources>
