<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8sp"
                android:orientation="horizontal">



                <ImageView
                    android:layout_width="158dp"
                    android:layout_height="131dp"
                    android:layout_marginLeft="20sp"
                    android:layout_weight="1"
                    android:src="@drawable/logo" />

                <ImageView
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20sp"
                    android:layout_weight="1"
                    android:src="@drawable/icon" />
    </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="666"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_name"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:focusableInTouchMode="true"
                android:hint="@string/address"
                android:imeOptions="actionUnspecified"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:focusableInTouchMode="true"
                android:hint="@string/phone"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="29dp"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

        </LinearLayout>